# chuk-leaderboard

./: README.md  pyproject.toml
debug/: elo_example.py  glicko2_example.py  points_example.py
src/chuk_leaderboard/rating_systems/: __init__,py  elo.py  glicko2.py  points_based.py  rating_system.py  registry.py
src/chuk_leaderboard/visualizers/: __init__,py  base_visualizer.py  expected_outcome_visualizer.py  rating_comparison_visualizer.py  rating_history_visualizer.py  rating_visualizer.py  season_projection_visualizer.py
tests/rating_systems/: test_elo.py  test_glicko2.py  test_points.py
