[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chuk-leaderboard"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.2.4",
]

[dependency-groups]
dev = [
    "matplotlib>=3.10.1",
    "pytest>=8.3.5",
    "tabulate>=0.9.0",
]

[tool.setuptools.packages.find]
where = ["src"]  # Change from "." to "src"
include = ["chuk_leaderboard*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
